# wearipedia

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  get-pip.py  gfittest.py  gitignore  mfptest.py  pyproject.toml  requirements.txt  set_secrets_script.py  setup.cfg  stravatest.py  test.py  to_delete.py  vantagetest.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  install.md
docs/source/infosheet/: index.rst  infosheet.csv
docs/source/notebooks/: cronometer.ipynb  dexcom_g6_pro.ipynb  dreem_headband_3.ipynb  fitbit_charge_4.ipynb  fitbit_sense.ipynb  garmin_fenix_7s.ipynb  google_fit.ipynb  index.rst  my_fitness_pal.ipynb  nutrisense_cgm.ipynb  oura_ring_gen_3.ipynb  polar_h10.ipynb  polar_vantage.ipynb  polar_verity_sense.ipynb  strava.ipynb  whoop_strap_4.ipynb  withings_body_plus.ipynb  withings_scanwatch.ipynb  withings_sleep.ipynb
docs/source/reference/: index.rst
docs/source/tutorials/: index.rst
notebooks/: Integrated_Polar_Verity_Sense_Guide_to_data_extraction_and_analysis.ipynb
tests/: README.md  test_all_devices_real.py  test_all_devices_syn.py
tests/devices/: checker_util.py  test_all_devices.py
tests/devices/apple/: test_healthkit.py
tests/devices/biostrap/: test_evo.py
tests/devices/coros/: test_coros_pace_2.py
tests/devices/cronometer/: test_cronometer.py
tests/devices/dexcom/: pro_cgm_checker.py  test_pro_cgm.py
tests/devices/dreem/: headband_2_checker.py
tests/devices/fitbit/: test_fitbit_charge_4.py  test_fitbit_charge_6.py  test_fitbit_sense.py
tests/devices/garmin/: fenix_7s_checker.py  test_fenix_7s.py
tests/devices/google/: test_googlefit.py
tests/devices/myfitnesspal/: test_myfitnesspal.py
tests/devices/nutrisense/: test_cgm.py
tests/devices/oura/: test_oura_ring3.py
tests/devices/polar/: test_h10.py  test_polar.py  test_vantage.py  test_verity_sense.py
tests/devices/qualtrics/: test_qualtrics.py
tests/devices/strava/: test_strava.py
tests/devices/underarmour/: test_myfitnesspal.py
tests/devices/whoop/: test_whoop.py  test_whoop_4.py  whoop_4_checker.py
tests/devices/withings/: bodyplus_checker.py  scanwatch_checker.py  test_bodyplus.py  test_scan_watch.py  test_scanwatch.py  test_sleepmat.py
tests/devices_real/: test_fenix_7s.py
tests/test_example/: test_hello.py
vnv/: pyvenv.cfg
wearipedia/: __init__.py  __main__.py  cl_parser.py  constants.py  example.py  utils.py
wearipedia/devices/: __init__.py  device.py  registry.py
wearipedia/devices/apple/: __init__.py  apple_gen.py  healthkit.py
wearipedia/devices/biostrap/: Biostrap_EVO.ipynb  __init__.py  evo.py  evo_fetch.py  evo_gen.py
wearipedia/devices/coros/: __init__.py  coros_authenticate.py  coros_pace_2.py  coros_pace_2_fetch.py  coros_pace_2_gen.py
wearipedia/devices/cronometer/: __init__.py  cronometer.py  cronometer_fetch.py  cronometer_synthetic.py  servings.csv  servings.json
wearipedia/devices/dexcom/: __init__.py  pro-cgm.py  pro_cgm.py  pro_cgm_fetch.py  pro_cgm_gen.py
wearipedia/devices/dreem/: dreem_fetch.py  headband_2.py
wearipedia/devices/fitbit/: __init__.py  fitbit_authenticate.py  fitbit_charge4_fetch.py  fitbit_charge_4.py  fitbit_charge_4_gen.py  fitbit_charge_6.py  fitbit_sense.py  fitbit_sense_fetch.py  fitbit_sense_gen.py  google_pixel_watch.py
wearipedia/devices/garmin/: __init__.py  fenix_7s.py  fenix_fetch.py  fenix_gen.py  fenix_gen_1.py  fenix_gen_2.py  fenix_gen_3.py  fenix_gen_4.py  fenix_gen_5.py  fenix_gen_6.py  fenix_gen_7.py
wearipedia/devices/google/: __init__.py  googlefit.py  googlefitness_fetch.py  googlefitness_synthetic.py
wearipedia/devices/myfitnesspal/: myfitnesspal.py  myfitnesspal_fetch.py  myfitnesspal_synthetic.py
wearipedia/devices/nutrisense/: __init__.py  cgm.py  (+2 more)
wearipedia/google/: googlefit.py  googlefitness_synthetic.py
(+51 files in other folders)
